# sequin-drum-sequencer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Sequin.bat  Sequin.spec  pyproject.toml
Samples/: README.md
docs/: drum-kits.md  spangle.md  user-manual.md
packaging/: README.txt
scripts/: build_exe.py  build_manual.py  sequin_main.py
src/sequin/: __init__.py  __main__.py  _bundle.py  app.py  config.py
src/sequin/practice/: __init__.py  drums.py  metronome.py  midifile.py  patternstore.py  pitch.py  songgrid.py
src/sequin/ui/: __init__.py  accessibility.py  drumspanel.py  metronomepanel.py  speech.py  theme.py
tests/: conftest.py  helpers.py  test_beat_editor.py  test_config.py  test_drums.py  test_drums_panel.py  test_kits_ui.py  test_metronome.py  test_midifile.py  test_pattern_editor.py  test_patternstore.py  test_pitch.py  test_sequin_ui.py  test_song_builder.py  test_songgrid.py
